test/libsolidity/syntaxTests/pragma/broken_version_strings_dots.sol
pragma solidity ^ 0 "." 8 "." 2;
// ----
// ParserError 1684: (0-32): Invalid version pragma. String literals are only allowed as the only component in a version pragma.
